tests/mypy/mypy_decorator_t1.out
tests/mypy/mypy_decorator_t1.py:31: error: Incompatible types in assignment (expression has type "int", variable has type "str")  [assignment]
tests/mypy/mypy_decorator_t1.py:34: error: Too few arguments for "__call__" of "FunctionWrapper"  [call-arg]
tests/mypy/mypy_decorator_t1.py:39: error: Argument 1 to "__call__" of "FunctionWrapper" has incompatible type "str"; expected "int"  [arg-type]
tests/mypy/mypy_decorator_t1.py:42: error: Too many arguments for "__call__" of "FunctionWrapper"  [call-arg]
tests/mypy/mypy_decorator_t1.py:62: error: Too few arguments for "__call__" of "FunctionWrapper"  [call-arg]
tests/mypy/mypy_decorator_t1.py:67: error: Argument 1 to "__call__" of "FunctionWrapper" has incompatible type "str"; expected "int"  [arg-type]
tests/mypy/mypy_decorator_t1.py:70: error: Too many arguments for "__call__" of "FunctionWrapper"  [call-arg]
tests/mypy/mypy_decorator_t1.py:99: error: Incompatible types in assignment (expression has type "str", variable has type "int")  [assignment]
tests/mypy/mypy_decorator_t1.py:102: error: Too few arguments for "function3"  [call-arg]
tests/mypy/mypy_decorator_t1.py:107: error: Argument 1 to "function3" has incompatible type "str"; expected "int"  [arg-type]
tests/mypy/mypy_decorator_t1.py:110: error: Too many arguments for "function3"  [call-arg]
tests/mypy/mypy_decorator_t1.py:135: error: Too few arguments for "__call__" of "FunctionWrapper"  [call-arg]
tests/mypy/mypy_decorator_t1.py:140: error: Argument 1 to "__call__" of "FunctionWrapper" has incompatible type "str"; expected "int"  [arg-type]
tests/mypy/mypy_decorator_t1.py:143: error: Too many arguments for "__call__" of "FunctionWrapper"  [call-arg]
tests/mypy/mypy_decorator_t1.py:218: error: Argument 1 to "__call__" of "FunctionWrapper" has incompatible type "int"; expected "Never"  [arg-type]
tests/mypy/mypy_decorator_t1.py:218: error: Argument 2 to "__call__" of "FunctionWrapper" has incompatible type "int"; expected "Never"  [arg-type]
tests/mypy/mypy_decorator_t1.py:220: error: Argument 1 to "__call__" of "FunctionWrapper" has incompatible type "int"; expected "Never"  [arg-type]
tests/mypy/mypy_decorator_t1.py:221: error: Argument 1 to "__call__" of "FunctionWrapper" has incompatible type "int"; expected "Never"  [arg-type]
tests/mypy/mypy_decorator_t1.py:221: error: Argument "b" to "__call__" of "FunctionWrapper" has incompatible type "int"; expected "Never"  [arg-type]
tests/mypy/mypy_decorator_t1.py:229: error: Argument 1 to "__call__" of "FunctionWrapper" has incompatible type "int"; expected "Never"  [arg-type]
tests/mypy/mypy_decorator_t1.py:229: error: Argument 2 to "__call__" of "FunctionWrapper" has incompatible type "int"; expected "Never"  [arg-type]
tests/mypy/mypy_decorator_t1.py:231: error: Argument 1 to "__call__" of "FunctionWrapper" has incompatible type "int"; expected "Never"  [arg-type]
tests/mypy/mypy_decorator_t1.py:232: error: Argument 1 to "__call__" of "FunctionWrapper" has incompatible type "int"; expected "Never"  [arg-type]
tests/mypy/mypy_decorator_t1.py:232: error: Argument "b" to "__call__" of "FunctionWrapper" has incompatible type "int"; expected "Never"  [arg-type]
tests/mypy/mypy_decorator_t1.py:240: error: Argument 1 to "__call__" of "FunctionWrapper" has incompatible type "int"; expected "Never"  [arg-type]
tests/mypy/mypy_decorator_t1.py:240: error: Argument 2 to "__call__" of "FunctionWrapper" has incompatible type "int"; expected "Never"  [arg-type]
tests/mypy/mypy_decorator_t1.py:242: error: Argument 1 to "__call__" of "FunctionWrapper" has incompatible type "int"; expected "Never"  [arg-type]
tests/mypy/mypy_decorator_t1.py:243: error: Argument 1 to "__call__" of "FunctionWrapper" has incompatible type "int"; expected "Never"  [arg-type]
tests/mypy/mypy_decorator_t1.py:243: error: Argument "b" to "__call__" of "FunctionWrapper" has incompatible type "int"; expected "Never"  [arg-type]
Found 29 errors in 1 file (checked 1 source file)
